Fixed overflowing images (#85)
* Fixed overflowing image

* Changed img class

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ footer.page-footer {
   margin-top: 0px;
 }
 
+img {
+  max-width: 100%;
+}
+
 .brand-logo img {
   height: 56px;
 }
